# kitchen-full-stack

./: README.md  pyproject.toml
ConsumerService/: manage.py
ConsumerService/ConsumerService/: settings.py
ConsumerService/service/: apps.py  threading_service.py
backend_pos/: README.md  db.sql  db.sql.d  db.sqlite3  manage.py
backend_pos/backend_pos/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend_pos/infra/redis/: docker-compose.yml
backend_pos/kitchen_service/: notifications.py  tasks.py  urls.py  views.py
backend_pos/kitchen_service/backends/: redis_cache.py
backend_pos/kitchen_service/templatetags/: custom_tags.py
backend_pos/order_service/: admin.py  api.py  producer_order.py  producer_payment.py  tasks.py  urls.py  views.py
backend_pos/order_service/exceptions/: __init__.py  order_exceptions.py  payment_exceptions.py
backend_pos/order_service/migrations/: 0001_initial.py
backend_pos/order_service/models/: __init__.py  menu.py  mixin.py  order.py  payment.py
backend_pos/order_service/schemas/: __init__.py  menu.py  order.py  payment.py
backend_pos/templates/: home.html
backend_pos/templates/board/: _base.html  board.html  index.html  meal_progress.html  refresh_board.html  ticket-board.html  ticket-tasks.html
frontend_pos/: .env  README.md  openapi.json  package.json  tailwind.config.js  template.html
frontend_pos/src/: App.tsx  index.css  main.tsx
frontend_pos/src/api/: kitchen-service.tsx
frontend_pos/src/components/: Cart.tsx  Category.tsx  Food.tsx  Navbar.tsx  SearchBar.tsx  StatusDialog.tsx
(+2 files in other folders)
